# nbody_simulation

./: README.md
csc4005-3-hybrid/csc4005-imgui/: CMakeLists.txt
csc4005-3-hybrid/csc4005-imgui/include/nbody/: body.hpp
csc4005-3-hybrid/csc4005-imgui/src/: main.cpp
csc4005-assignment-3-mpi-pth-omp/csc4005-imgui/: CMakeLists.txt
csc4005-assignment-3-mpi-pth-omp/csc4005-imgui/include/nbody/: body.hpp  bodycu.hpp  bodympi.hpp  bodyomp.hpp  bodypthread.hpp
csc4005-assignment-3-mpi-pth-omp/csc4005-imgui/src/: cuda.cu  main.cpp  mpi.cpp  omp.cpp  pthread.cpp
csc4005-assignment3-cuda/csc4005-imgui/: CMakeLists.txt
csc4005-assignment3-cuda/csc4005-imgui/include/nbody/: bodycu_thread.hpp
csc4005-assignment3-cuda/csc4005-imgui/src/: main.cu
